[metadata]
name = test-skeleton
author = Jerry Pussinen
summary = a tool for creating a skeleton for Python unit tests based on source code
description-file = README.md
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
[files]
packages =
    test_skeleton
[wheel]
universal = 1
