[metadata]
name = test-skeleton
author = Jerry Pussinen
author-email = jerry.pussinen@gmail.com
url = https://github.com/jerry-git/test-skeleton
version = 0.1.0
summary = a tool for creating a skeleton for Python unit tests based on source code
description-file = README.md
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
[files]
packages =
    test_skeleton
[wheel]
universal = 1
